Resolved resource reading, adapted test to changes